...
            .toolbar {
                Button {
                    self.viewModel.newList()
                } label: {
                    Label("Agregar lista", systemImage: "plus")
                }
                .accessibilityIdentifier("AddListButton")
            }
            .onAppear() {
                self.viewModel.getInitialData()
            }
            .sheet(item: self.$viewModel.sheet, onDismiss: {
                self.viewModel.getInitialData()
...
                        .contextMenu {
                            Button {
                                self.viewModel.updateList(list)
                            } label: {
                                Label("Editar", systemImage: "pencil")
                            }
                            .accessibilityIdentifier("EditListButton")
                        }
                    }
                }
                .padding()
            }
        }
...
