...
            ToolbarItem(placement: .topBarTrailing) {
                Button {
                    self.viewModel.newItem(shoppingList: self.viewModel.shoppingList)
                } label: {
                    Label("Agregar producto", systemImage: "plus")
                }
                .accessibilityIdentifier("AddItemButton")
            }
        }
    }
    
    @ViewBuilder
    private var itemsScreen: some View {
...
